--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,8 @@
   },
   "rules": {
     "prettier/prettier": "error",
-    "react/jsx-filename-extension": ["off"]
+    "react/jsx-filename-extension": "off",
+    "@typescript-eslint/explicit-function-return-type": "off"
   },
   "settings": {
     "import/resolver": {
