--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.6.0",
-    "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hooks": "^1.0.1",
