--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "jsx": "react",
     "moduleResolution": "node",
     "removeComments": true,
+    "esModuleInterop": true,
     "lib": ["es2019", "dom"]
   },
   "include": ["src/**/*"]
