--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.6.0",
     "dotenv": "^8.2.0",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hooks": "^1.0.1",
